@@ -1237,3 +1237,7 @@ Version 12
                 ECJ's default compiler to javac -target 1.3 -source 1.3
 	Updates to MersenneTwisterFast
 	Added indent to make dist
+	Tweaks to make jar so we add a manifest which fires up a default form
+		of MASON if double-clicked on.
+	Modified Display2D's checking for iText so it doesn't bomb if iText isn't
+		there!
